# Backend

./: Book1.csv  app.py  new_det.csv  new_det_result.csv  pyproject.toml  trading_app.db  train1.ipynb
